[gd_scene load_steps=2 format=3 uid="uid://cg8bm3dv4r7yh"]

[ext_resource type="Script" path="res://UI/Apps/TextViewer.gd" id="1_textviewer"]

[node name="TextViewer" type="CharacterBody2D"]
script = ExtResource("1_textviewer")

[node name="TitleBar" type="Panel" parent="."]
offset_right = 500.0
offset_bottom = 30.0

[node name="TitleLabel" type="Label" parent="TitleBar"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 10.0
offset_top = -11.5
offset_right = 200.0
offset_bottom = 11.5
grow_vertical = 2
text = "Text Viewer"

[node name="CloseButton" type="Button" parent="TitleBar"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -70.0
offset_top = -12.0
offset_right = -10.0
offset_bottom = 12.0
grow_horizontal = 0
grow_vertical = 2
text = "X"

[node name="ContentArea" type="Panel" parent="."]
offset_top = 30.0
offset_right = 500.0
offset_bottom = 400.0

[node name="TextDisplay" type="TextEdit" parent="ContentArea"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
editable = false
wrap_mode = 1

